# kaldi-io

./: .gitignore  CMakeLists.txt  README.md  kaldi-io.h
matrix/: kaldi-matrix.h
